# research-os

./: .gitignore  README.md
.claude/skills/researchos-design/: CLAUDE_CODE_HANDOFF.md  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  design.md  readme.md  styles.css
backend/: .env.example  pyproject.toml
backend/api/: deps.py  main.py
backend/api/routes/: equipment.py  health.py  sessions.py
backend/core/: config.py  exceptions.py  models.py
backend/db/: database.py  repository.py
backend/services/: firecrawl_client.py  gap_analyzer.py  intent_classifier.py  orchestrator.py  product_evaluator.py  query_optimizer.py  qwen.py  synthesizer.py  vane_client.py  wiki_reader.py  wiki_writer.py
backend/templates/: decision.md.j2
backend/tests/: conftest.py  test_api.py  test_gap_analyzer.py  test_health.py  test_job_persistence.py  test_models.py  test_orchestrator.py  test_product_evaluator.py  test_qwen.py  test_repository.py  test_review_fixes.py  test_vane_client.py  test_wiki_writer.py
claudedocs/: code_review_researchos_20260610.md  handoff_researchos_wealthos_integration.md  research_researchos_product_apis_20260607.md
deploy/: DEPLOY-NOTES.md  researchos-backend.service  researchos-frontend.service
frontend/: next.config.ts  package-lock.json
frontend/src/app/: fonts.ts  globals.css  layout.tsx  page.tsx
frontend/src/components/: approach-card.tsx  budget-pill.tsx  fit-score.tsx  logo.tsx  price-chart.tsx  priority-badge.tsx  product-card.tsx  research-status.tsx  status-badge.tsx
frontend/src/lib/: api.ts  types.ts
(+70 files in other folders)
